--- a/mjpg-streamer/plugins/output_https/Makefile
+++ b/mjpg-streamer/plugins/output_https/Makefile
@@ -12,9 +12,9 @@ CC = gcc
 OTHER_HEADERS = ../../mjpg_streamer.h ../../utils.h ../output.h ../input.h
 
 CFLAGS += -O1 -DLINUX -D_GNU_SOURCE -Wall -shared -fPIC
-#CFLAGS +=  -g
+CFLAGS +=  -g
 #CFLAGS += -DDEBUG
-LFLAGS += -lpthread -ldl 
+LFLAGS += -lssl -lcrypto
 
 all: output_https.so
 
@@ -22,11 +22,11 @@ clean:
 	rm -f *.a *.o core *~ *.so *.lo
 
 output_https.so: $(OTHER_HEADERS) output_https.c httpd.lo security.o
-	$(CC) $(CFLAGS) -o $@ output_https.c httpd.lo security.o -lssl -lcrypto
+	$(CC) $(CFLAGS) -o $@ output_https.c httpd.lo security.o $(LFLAGS)
 
 httpd.lo: $(OTHER_HEADERS) httpd.h httpd.c
-	$(CC) -c $(CFLAGS) -o $@ httpd.c -lcrypto -lssl
+	$(CC) -c $(CFLAGS) -o $@ httpd.c 
 	
 security.o: security.h security.c
-	$(CC) -c $(CFLAGS) -o $@ security.c -lcrypto -lssl
+	$(CC) -c $(CFLAGS) -o $@ security.c 
 	
